--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <fragment
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8"
-        class="com.google.android.gms.maps.MapFragment" />
-
     <Button
-        android:text="장소검색"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"/>
+        android:id="@+id/btLocation"
+        android:text="가까운 편의점 찾기"/>
 
 
 </LinearLayout>
