--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
         android:id="@+id/btLocation"
         android:text="가까운 편의점 찾기"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btInfor"
+        android:text="타슈 정거장 조회"/>
+
 
 </LinearLayout>
