--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,11 @@
         android:id="@+id/TextVoice"
         android:hint="textvoie"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btMusic"
+        android:text="노래듣기"/>
+
 
 </LinearLayout>
